--- a/src/components/SectionContainer.astro
+++ b/src/components/SectionContainer.astro
@@ -1,6 +1,6 @@
 ---
 const { class: className} = Astro.props
 ---
-<section class=`w-full mx-auto lg:w-[740px] py-32 px-12 ${className}`>
-    <slot />
+<section class=`w-full mx-auto lg:w-[740px] py-24 px-12 ${className}`>
+    <slot class="py-"/>
 </section>
