--- a/src/components/Tecnologies.astro
+++ b/src/components/Tecnologies.astro
@@ -11,47 +11,22 @@ import TailwindIcon from "./icons/Tailwind.astro";
 import GithubIcon from "./icons/Github.astro";
 import MysqlIcon from "./icons/Mysql.astro";
 import FigmaIcon from "./icons/Figma.astro";
-
 ---
 
-<h3 class="text-5xl font-bold mb-12 ">
-    <span class="bg-gradient-to-r from-violet-600 to-orange-400 bg-clip-text text-transparent">Tecnologías</span> que uso.
+<h3 class="text-5xl font-bold mb-12 flex justify-center">
+  <span class="bg-gradient-to-r from-violet-600 to-orange-400 bg-clip-text text-transparent">Tecnologías </span>que uso.
 </h3>
-<div class="grid grid-cols-6  md:grid-cols-6 sm:grid-cols-3 gap-4">
-    <div>
-        <Html5Icon class="h-auto max-w-full rounded-lg" />
-    </div>
-    <div>
-        <JavascriptIcon class="h-auto max-w-full rounded-lg" />
-    </div>
-    <div>
-        <CssIcon  class="h-auto max-w-full rounded-lg" />
-    </div>
-    <div>
-        <TailwindIcon class="h-auto max-w-full rounded-lg text-white" />
-    </div>
-    <div>
-        <PhpIcon class="h-auto max-w-full rounded-lg text-white" />
-    </div>
-    <div>
-        <MysqlIcon class="h-auto max-w-full rounded-lg text-white" />
-    </div>
-    <div>
-        <ReactIcon class="h-auto max-w-full rounded-lg text-white" />
-    </div>
-    <div>
-        <LaravelIcon class="h-auto max-w-full rounded-lg text-white" />
-    </div>
-    <div>
-        <NodeJsIcon class="h-auto max-w-full rounded-lg text-white" />
-    </div>
-    <div>
-        <GitIcon class="h-auto max-w-full rounded-lg text-white" />
-    </div>
-    <div>
-        <GithubIcon class="h-auto max-w-full rounded-lg text-white" />
-    </div>
-    <div>
-        <FigmaIcon class="h-auto max-w-fit rounded-lg text-white" />
-    </div>
+<div class="grid grid-cols-6 md:grid-cols-6 sm:grid-cols-3 gap-8 w-2/4 mx-auto sm:md:w-auto">
+  <div><Html5Icon class="h-auto max-w-full rounded-lg" /></div>
+  <div><CssIcon class="h-auto max-w-full rounded-lg" /></div>
+  <div><JavascriptIcon class="h-auto max-w-full rounded-lg" /></div>
+  <div><PhpIcon class="h-auto max-w-full rounded-lg text-white" /></div>
+  <div><MysqlIcon class="h-auto max-w-full rounded-lg text-white" /></div>
+  <div><GitIcon class="h-auto max-w-full rounded-lg text-white" /></div>
+  <div><FigmaIcon class="h-auto max-w-fit rounded-lg text-white" /></div>
+  <div><TailwindIcon class="h-auto max-w-full rounded-lg text-white" /></div>
+  <div><ReactIcon class="h-auto max-w-full rounded-lg text-white" /></div>
+  <div><LaravelIcon class="h-auto max-w-full rounded-lg text-white" /></div>
+  <div><NodeJsIcon class="h-auto max-w-full rounded-lg text-white" /></div>
+  <div><GithubIcon class="h-auto max-w-full rounded-lg text-white" /></div>
 </div>
