--- a/src/components/Design.astro
+++ b/src/components/Design.astro
@@ -1,14 +1,11 @@
 ---
 import ListItem from "./ListItem.astro";
-
 ---
 
-<h1 class="text-5xl font-bold pb-28 text-balance">
-    Diseño web que trasciende, impulsando tu <span class="bg-gradient-to-r from-violet-600 to-orange-400 bg-clip-text text-transparent">éxito digital</span>.
-</h1>
+
 <ul class="group">
-    <ListItem link="#proyectos">Proyectos</ListItem>
-    <ListItem link="#tecnologias">Tecnologías</ListItem>
-    <ListItem link="#experiencia">Experiencia</ListItem>
-    <ListItem link="#clientes">Clientes</ListItem>
+  <ListItem link="#experiencia">Experiencia</ListItem>
+  <ListItem link="#proyectos">Proyectos</ListItem>
+  <ListItem link="#tecnologias">Tecnologías</ListItem>
+  <ListItem link="#galeria">Clientes</ListItem>
 </ul>
