--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,70 +1,66 @@
 ---
+import EmailIcon from "./icons/Email.astro";
 import FacebookIcon from "./icons/Facebook.astro";
 import Github from "./icons/Github.astro";
-import XIcon from "./icons/X.astro";
-
+import LinkedinIcon from "./icons/LinkedIn.astro";
 ---
 
-<footer class="bg-white dark:bg-gray-900">
-  <div class="mx-auto w-full max-w-screen-xl p-4 py-6 lg:py-8">
-    <div class="flex justify-between items-center md:flex md:justify-between">
-      <div class="mb-0 md:mb-0">
-        <a href="http://frlawer.com.ar/">
-          <img src="/Logo Frlawer.webp" class="h-14 m-0" alt="Frlawer Logo" />
-        </a>
-      </div>
-      <div class="gap-8">
-        <ul class="text-gray-500 dark:text-gray-400 font-medium flex">
-          <li class="mb-4 px-3">
-            <a href="#" class="hover:underline">Inicio</a>
-          </li>
-          <li class="mb-4 px-3">
-            <a href="#" class="hover:underline"
-              >Proyectos</a
-            >
-          </li>
-          <li class="mb-4 px-3">
-            <a href="#" class="hover:underline"
-              >Tecnologías</a
-            >
-          </li>
-          <li class="mb-4 px-3">
-            <a href="#" class="hover:underline"
-              >Clientes</a
-            >
-          </li>
-        </ul>
-      </div>
-    </div>
-    <hr class="my-3 border-gray-200 sm:mx-auto dark:border-gray-700 lg:my-8" />
+<footer
+  class="bg-white dark:bg-gray-900 backdrop-blur-lg w-full xl:w-[1120px] mx-auto mb-10 rounded-lg"
+>
+  <div class="mx-auto w-full max-w-screen-xl p-4 py-1 lg:py-2">
     <div class="py-4 sm:flex sm:items-center sm:justify-between">
-      <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400"
-        > <a href="https://flowbite.com/" class="hover:underline"
+      <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">
+        <a href="https://flowbite.com/" class="hover:underline"
           >Fran Rodriguez © 2023</a
         >
       </span>
-      <div class="flex mt-4 sm:justify-center sm:mt-0">
+      <div class="flex justify-between items-center md:flex md:justify-between">
+        <div class="gap-8">
+          <ul class="text-gray-500 dark:text-gray-400 font-medium flex">
+            <li class="px-3">
+              <a href="#top" class="hover:underline">Inicio</a>
+            </li>
+            <li class="px-3">
+              <a href="#sobre-mi" class="hover:underline">Sobre mí</a>
+            </li>
+            <li class="px-3">
+              <a href="#experiencia" class="hover:underline">Experiencia</a>
+            </li>
+            <li class="px-3">
+              <a href="#proyectos" class="hover:underline">Proyectos</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="flex mt-4 sm:justify-center sm:mt-0 items-center">
         <a
-          href="#"
+          href="https://fb.com/frlawer"
           class="text-gray-500 hover:text-gray-900 dark:hover:text-white"
         >
-          <FacebookIcon class="w-4 h-4" />
+          <FacebookIcon class="h-6 w-8" />
           <span class="sr-only">Facebook page</span>
         </a>
         <a
-          href="#"
+          href="https://linkedin.com/in/frandir"
           class="text-gray-500 hover:text-gray-900 dark:hover:text-white ms-5"
         >
-          <XIcon class="w-3 h-4 text-gray-500" />
-          <span class="sr-only">X</span>
+          <LinkedinIcon class="size-6 text-gray-500" />
+          <span class="sr-only">Linkedin</span>
         </a>
         <a
-          href="#"
+          href="https://github.com/frlawer"
           class="text-gray-500 hover:text-gray-900 dark:hover:text-white ms-5"
         >
-				<Github class="w-4 h-4"/>
+          <Github class="size-6" />
           <span class="sr-only">GitHub account</span>
         </a>
+        <a
+          href="https://github.com/frlawer"
+          class="text-gray-500 hover:text-gray-900 dark:hover:text-white ms-5"
+        >
+          <EmailIcon class="size-8" />
+          <span class="sr-only">Email</span>
         </a>
       </div>
     </div>
