--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,21 +1,25 @@
 ---
-import Button from "./Button.astro";
 import SocialPill from "./SocialPill.astro";
 import WhatsappIcon from "./icons/WhatsappIcon.astro";
 ---
-<header class="flex justify-evenly items-center py-4 w-screen mx-auto">
 
-    <img class="size-14 bg-white rounded-full bg-clip-padding p-px" src="/Logo-Frlawer.png" alt="">
+<header class="
+  flex justify-evenly items-center flex-wrap 
+  top-0 py-10 mx-auto 
+  w-full xl:[1120px] 
+  z-10
+">
+  <nav class="flex flex-row gap-x-10">
+    <a href="#experiencia" class="transition">Experiencia</a>
+    <a href="#proyectos" class="transition">Proyectos</a>
+    <a href="#tecnologias" class="transition">Tecnologías</a>
+  </nav>
 
-    <nav class="flex flex-row gap-x-10">
-        <a href="/">Inicio</a>
-        <a href="#sobre-mi">Sobre mí</a>
-        <a href="#proyectos">Proyectos</a>
-        <a href="#contacto">Contacto</a>
-    </nav>
-    
-    <SocialPill>
-        <WhatsappIcon class="size-5 text-white/90" />
-        Escribíme
-    </SocialPill>
+  <SocialPill
+    href="https://wa.me/542995135074?text=Miré%20tu%20Porfolio,%20Necesitamos%20hablar.!"
+    class="py-3 sm:my-4"
+  >
+    <WhatsappIcon class="size-6" />
+    Necesitamos hablar.!
+  </SocialPill>
 </header>
