--- a/src/components/ListItem.astro
+++ b/src/components/ListItem.astro
@@ -3,13 +3,17 @@ import ArrowUpR from "./icons/ArrowUpR.astro";
 const { link } = Astro.props;
 ---
 
-<a href={link}>
-  <li
-    class="border-y hover:border-transparent
-    text-6xl font-bold py-10 text-slate-300 hover:text-white
-    hover:bg-gradient-to-r hover:from-violet-600 hover:to-orange-400"
+<a class="
+hover:transition-all
+" href={link}>
+<li
+  class="
+    border-b-2 hover:border-transparent
+    hover:bg-gradient-to-r hover:from-violet-600 hover:to-orange-400
+    py-10
+    "
   >
-    <h2 class="flex items-center justify-between">
+    <h2 class="flex items-center justify-between text-6xl font-bold text-slate-300 hover:text-white">
       <span><slot /></span>
       <ArrowUpR />
     </h2>
