--- a/src/components/SectionContainer.astro
+++ b/src/components/SectionContainer.astro
@@ -1,6 +1,11 @@
 ---
-const { class: className} = Astro.props
+const { id, class: className } = Astro.props;
 ---
-<section class=`w-full mx-auto lg:w-[740px] py-24 px-12 ${className}`>
-    <slot class="py-"/>
+
+<section
+  id={id}
+  data-section={id}
+  class=`section ${className? className: ""} w-full mx-auto xl:lg:w-[740px] py-28 px-7`
+>
+  <slot />
 </section>
