--- a/src/components/SocialPill.astro
+++ b/src/components/SocialPill.astro
@@ -1,8 +1,12 @@
-<a 
-    class="rounded-full border border-white/10 flex justify-center items-center gap-x-2 px-4"
-    { ...Astro.props }
-    target="_blank"
-    rel="noopener noreferrer"
+---
+const { class: className } = Astro.props;
+---
+
+<a
+  class={`bg-slate-800 rounded-full border border-white/10 flex justify-center items-center gap-x-2 px-4 ${className}`}
+  target="_blank"
+  rel="noopener noreferrer"
+  {...Astro.props}
 >
-    <slot />
+  <slot />
 </a>
