--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,32 +5,41 @@ import SectionContainer from "../components/SectionContainer.astro";
 import Design from "../components/Design.astro";
 import Presentacion from "../components/Presentacion.astro";
 import Tecnologies from "../components/Tecnologies.astro";
-import Galeria from "../components/Galeria.astro";
-import Footer from "../components/Footer.astro";
+import Proyectos from "../components/Proyectos.astro";
 ---
 
-<Layout title="Fran">
-  <main>
-    <SectionContainer>
+<Layout title="Francisco - Desarrollador Fullstack" description="">
+  <main class="px-4">
+    <SectionContainer id="sobre-mi" class="pt-10">
       <Presentacion />
     </SectionContainer>
 
-    <SectionContainer class="bg-neutral-950">
+    <SectionContainer id="todo" id="sobre-mi">
+      <h1 class="text-5xl font-bold pb-28 text-balance">
+        Diseño web que trasciende, impulsando el <span
+          class="bg-gradient-to-r from-violet-600 to-orange-400 bg-clip-text text-transparent"
+          >éxito digital</span
+        >.
+      </h1>
       <Design />
     </SectionContainer>
 
-    <SectionContainer>
-      <Experience />
+    <SectionContainer id="experiencia">
+      <Experience class="" />
     </SectionContainer>
 
-    <SectionContainer class="bg-neutral-950">
+    <SectionContainer id="proyectos">
+      <h3 class="text-5xl font-bold mb-12">
+        Descubre mis <br /><span
+          class="bg-gradient-to-r from-violet-600 to-orange-400 bg-clip-text text-transparent"
+          >Proyectos</span
+        >.
+      </h3>
+      <Proyectos />
+    </SectionContainer>
+
+    <SectionContainer id="tecnologias">
       <Tecnologies />
     </SectionContainer>
-    
-    <SectionContainer>
-      <Galeria />
-    </SectionContainer>
-    
-    <Footer />
   </main>
 </Layout>
