Update import paths for icons in components

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,8 +1,8 @@
 ---
-import EmailIcon from "./icons/Email.astro";
-import FacebookIcon from "./icons/Facebook.astro";
-import Github from "./icons/Github.astro";
-import LinkedinIcon from "./icons/LinkedIn.astro";
+import EmailIcon from "../icons/Email.astro";
+import FacebookIcon from "../icons/Facebook.astro";
+import Github from "../icons/Github.astro";
+import LinkedinIcon from "../icons/LinkedIn.astro";
 ---
 
 <footer
