--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,6 +1,6 @@
 ---
 import SocialPill from "./SocialPill.astro";
-import WhatsappIcon from "./icons/WhatsappIcon.astro";
+import WhatsappIcon from "../icons/WhatsappIcon.astro";
 ---
 
 <header class="
