--- a/src/components/Presentacion.astro
+++ b/src/components/Presentacion.astro
@@ -1,9 +1,9 @@
 ---
 import Badge from "../components/Badge.astro";
 import ImageFront from "../components/ImageFront.astro";
-import GithubIcon from "../components/icons/Github.astro";
-import LinkedInIcon from "../components/icons/LinkedIn.astro";
-import EmailIcon from "../components/icons/Email.astro";
+import GithubIcon from "../icons/Github.astro";
+import LinkedInIcon from "../icons/LinkedIn.astro";
+import EmailIcon from "../icons/Email.astro";
 import SocialPill from "../components/SocialPill.astro";
 ---
 
