--- a/src/components/Proyectos.astro
+++ b/src/components/Proyectos.astro
@@ -1,9 +1,9 @@
 ---
-import PhpIcon from "./icons/Php.astro";
-import JavascriptIcon from "./icons/Javascript.astro";
-import HtmlIcon from "./icons/Html5.astro";
-import CssIcon from "./icons/Css.astro";
-import MysqlIcon from "./icons/Mysql.astro";
+import PhpIcon from "../icons/Php.astro";
+import JavascriptIcon from "../icons/Javascript.astro";
+import HtmlIcon from "../icons/Html5.astro";
+import CssIcon from "../icons/Css.astro";
+import MysqlIcon from "../icons/Mysql.astro";
 
 const TAGS = {
   PHP: {
