--- a/src/components/ExperienceItem.astro
+++ b/src/components/ExperienceItem.astro
@@ -1,5 +1,5 @@
 ---
-import ListDetailIcon from "./icons/ListDetail.astro";
+import ListDetailIcon from "../icons/ListDetail.astro";
 interface Props {
   title: string;
   description: string;
