--- a/src/components/ListItem.astro
+++ b/src/components/ListItem.astro
@@ -1,5 +1,5 @@
 ---
-import ArrowUpR from "./icons/ArrowUpR.astro";
+import ArrowUpR from "../icons/ArrowUpR.astro";
 const { link } = Astro.props;
 ---
 
