--- a/src/components/Tecnologies.astro
+++ b/src/components/Tecnologies.astro
@@ -1,16 +1,16 @@
 ---
-import Html5Icon from "./icons/Html5.astro";
-import JavascriptIcon from "./icons/Javascript.astro";
-import CssIcon from "./icons/Css.astro";
-import PhpIcon from "./icons/Php.astro";
-import ReactIcon from "./icons/ReactJs.astro";
-import LaravelIcon from "./icons/Laravel.astro";
-import GitIcon from "./icons/Git.astro";
-import NodeJsIcon from "./icons/NodeJs.astro";
-import TailwindIcon from "./icons/Tailwind.astro";
-import GithubIcon from "./icons/Github.astro";
-import MysqlIcon from "./icons/Mysql.astro";
-import FigmaIcon from "./icons/Figma.astro";
+import Html5Icon from "../icons/Html5.astro";
+import JavascriptIcon from "../icons/Javascript.astro";
+import CssIcon from "../icons/Css.astro";
+import PhpIcon from "../icons/Php.astro";
+import ReactIcon from "../icons/ReactJs.astro";
+import LaravelIcon from "../icons/Laravel.astro";
+import GitIcon from "../icons/Git.astro";
+import NodeJsIcon from "../icons/NodeJs.astro";
+import TailwindIcon from "../icons/Tailwind.astro";
+import GithubIcon from "../icons/Github.astro";
+import MysqlIcon from "../icons/Mysql.astro";
+import FigmaIcon from "../icons/Figma.astro";
 ---
 
 <h3 class="text-5xl font-bold mb-12 flex justify-center">
