Update copyright year in Footer component

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -10,12 +10,12 @@ import LinkedinIcon from "../icons/LinkedIn.astro";
 >
   <div class="mx-auto w-full max-w-screen-xl p-4 py-1 lg:py-2">
     <div class="py-4 sm:flex sm:items-center sm:justify-between">
-      <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">
-        <a href="https://flowbite.com/" class="hover:underline"
-          >Fran Rodriguez © 2023</a
-        >
-      </span>
-      <div class="flex justify-between items-center md:flex md:justify-between">
+      <a href="https://flowbite.com/" class="hover:underline">
+        <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">
+          Fran Rodriguez © {new Date().getFullYear()}
+        </span>
+      </a>
+      <div class="flex justify-between items-center">
         <div class="gap-8">
           <ul class="text-gray-500 dark:text-gray-400 font-medium flex">
             <li class="px-3">
