Update social pill margin in Header component

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -17,7 +17,7 @@ import WhatsappIcon from "../icons/WhatsappIcon.astro";
 
   <SocialPill
     href="https://wa.me/542995135074?text=Miré%20tu%20Porfolio,%20Necesitamos%20hablar.!"
-    class="py-3 sm:my-4"
+    class="py-3 sm:my-4 mt-4"
   >
     <WhatsappIcon class="size-6" />
     Necesitamos hablar.!
