Refactor Tecnologies.astro component layout

--- a/src/components/Tecnologies.astro
+++ b/src/components/Tecnologies.astro
@@ -13,10 +13,13 @@ import MysqlIcon from "../icons/Mysql.astro";
 import FigmaIcon from "../icons/Figma.astro";
 ---
 
-<h3 class="text-5xl font-bold mb-12 flex justify-center">
-  <span class="bg-gradient-to-r from-violet-600 to-orange-400 bg-clip-text text-transparent">Tecnologías </span>que uso.
-</h3>
-<div class="grid grid-cols-6 md:grid-cols-6 sm:grid-cols-3 gap-8 w-2/4 mx-auto sm:md:w-auto">
+
+<div class="
+  grid gap-8 mx-auto 
+  lg:grid-cols-6 
+  md:grid-cols-3 
+  grid-cols-3 w-full
+  ">
   <div><Html5Icon class="h-auto max-w-full rounded-lg" /></div>
   <div><CssIcon class="h-auto max-w-full rounded-lg" /></div>
   <div><JavascriptIcon class="h-auto max-w-full rounded-lg" /></div>
