--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -39,6 +39,9 @@ import Proyectos from "../components/Proyectos.astro";
     </SectionContainer>
 
     <SectionContainer id="tecnologias">
+      <h3 class="text-5xl font-bold mb-12 flex justify-center">
+        <span class="bg-gradient-to-r from-violet-600 to-orange-400 bg-clip-text text-transparent">Tecnologías</span>&nbsp;que utilizo.
+      </h3>
       <Tecnologies />
     </SectionContainer>
   </main>
