--- a/src/components/Presentacion.astro
+++ b/src/components/Presentacion.astro
@@ -30,7 +30,7 @@ import SocialPill from "../components/SocialPill.astro";
   >
 </h2>
 
-<nav class="flex gap-x-4 mt-8 justify-center">
+<nav class="flex gap-x-4 mt-8 flex-col justify-center md:flex-row gap-3">
   <SocialPill href="https://github.com/frlawer">
     <GithubIcon class="size-8" />
     Github
