--- a/src/components/SocialPill.astro
+++ b/src/components/SocialPill.astro
@@ -3,7 +3,7 @@ const { class: className } = Astro.props;
 ---
 
 <a
-  class={`bg-slate-800 rounded-full border border-white/10 flex justify-center items-center gap-x-2 px-4 ${className}`}
+  class={`bg-slate-800 rounded-full border border-white/10 flex justify-center items-center gap-x-2 p-4 md:p-2 ${className}`}
   target="_blank"
   rel="noopener noreferrer"
   {...Astro.props}
