--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -8,7 +8,7 @@ const EXPERIENCE = [
     company: "Frlawer",
     link: "http://linkedin.com/in/frandir",
     description:
-      "Me dedico al desarrollo web desde 2016 de manera freelance, iniciando con proyectos personales y luego con clientes de la ciudad de San Fernando del Valle de Catamarca. Actualmente me encuentro trabajando en proyectos de manera remota para clientes de Argentina y el exterior. Me especializo en el desarrollo de aplicaciones web con HTML, CSS, Javascript, TailwindCSS, ReactJS, Git, entre otras tecnologías para el Frontend; y con Php, Laravel, Mysql, NodeJS, Next.js, para el Backend.",
+      "Me dedico al desarrollo web desde 2016 de manera freelance, iniciando con proyectos personales y luego con clientes de la provincia de Catamarca y Neuquén. Actualmente me encuentro trabajando en proyectos de manera remota para clientes de Argentina y el exterior. Me especializo en el desarrollo de aplicaciones web con HTML, CSS, Javascript, TailwindCSS, ReactJS, Git, entre otras tecnologías para el Frontend; y con Php, Laravel, Mysql, NodeJS, Next.js, para el Backend.",
     img: "/Logo Frlawer.webp",
   },
   {
@@ -17,7 +17,7 @@ const EXPERIENCE = [
     company: "Unco Activa",
     link: "https://github.com/Unco-Activa/Unco-Activa",
     description:
-      "Desarrollo de aplicacion web con ReactJS para el frontend, creación de componentes para registro de los participantes con pago a través de boton de Mercado Pago, HTML, CSS, TailwindCSS, Material UI, Git,  entre otras tecnologías.",
+      "Proyecto de desarrollo de aplicacion web de la carrera de la Universidad del Comahue. desarrollada con ReactJS para el frontend, creación de componentes para registro de los participantes con pago a través de boton de Mercado Pago, HTML, CSS, TailwindCSS, Material UI, Git, entre otras tecnologías.",
     img: "/uncoactiva.webp",
   },
   {
@@ -27,7 +27,7 @@ const EXPERIENCE = [
     company: "Mi guía Catamarca",
     link: "https://github.com/Frlawer/miguiacatamarca/tree/master",
     description:
-      "Desarrollo de sitio web para el registro de empresas locales con selección de ubicación y muestra en Google maps mediante geolocalización o coordenadas, incorporación de imágenes, resaltado de destacados, banners de publicaciones destacadas tipo publicidad.",
+      "Desarrollo de sitio web para el registro de empresas locales con selección de ubicación y muestra en Google maps mediante geolocalización o coordenadas, incorporación de imágenes, resaltado de destacados, banners de publicaciones destacadas tipo publicidad, comentarios de visitantes a diferentes empresas.",
     img: "/miguiacatamarca.webp",
   },
 ];
