Actualizar descripción de ubicación en Presentacion.astro

--- a/src/components/Presentacion.astro
+++ b/src/components/Presentacion.astro
@@ -24,7 +24,7 @@ import SocialPill from "../components/SocialPill.astro";
 <h2 class="text-2xl opacity-80 text-wrap">
   <span>+10 años de experiencia como freelance.</span>
   <span class="text-yellow-200/90">Desarrollador web.</span>
-  <span class="text-red-200/90">Catamarqueño en Neuquén, Argentina.</span>
+  <span class="text-red-200/90">Neuquino por adopción, Argentino.</span>
   <span class="opacity-75"
     >Preparado para asesorar empresas en soluciones web.</span
   >
