feat: Actualizar enlace de la sección de clientes en el componente Design.astro

--- a/src/components/Design.astro
+++ b/src/components/Design.astro
@@ -7,5 +7,5 @@ import ListItem from "./ListItem.astro";
   <ListItem link="#experiencia">Experiencia</ListItem>
   <ListItem link="#proyectos">Proyectos</ListItem>
   <ListItem link="#tecnologias">Tecnologías</ListItem>
-  <ListItem link="#galeria">Clientes</ListItem>
+  <ListItem link="#clientes">Clientes</ListItem>
 </ul>
