--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -56,7 +56,7 @@ import LinkedinIcon from "../icons/LinkedIn.astro";
           <span class="sr-only">GitHub account</span>
         </a>
         <a
-          href="https://github.com/frlawer"
+          href="mailto:frlawer@gmail.com"
           class="text-gray-500 hover:text-gray-900 dark:hover:text-white ms-5"
         >
           <EmailIcon class="size-8" />
